# Tameshi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml
.github/workflows/: publish-crates.yml  release-guard.yml  release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  mod.rs  scan.rs  transform.rs
crates/cli/tests/: integration_test.rs  test_cfg_structure.rs
crates/scanners/: Cargo.toml
crates/scanners/src/: access_control.rs  cross_function_reentrancy.rs  dangerous_functions.rs  dos_vulnerabilities.rs  integer_overflow.rs  lib.rs  price_manipulation.rs  provenance.rs  reentrancy.rs  state_modifications.rs  test_imports.rs  time_vulnerabilities.rs  unchecked_return.rs
crates/scanners/src/analysis/: call_graph.rs  confidence.rs  hooks.rs  interprocedural.rs  loop_analyzer.rs  mod.rs  name_resolution.rs  path_explorer.rs  safe_patterns.rs  secure_patterns.rs  version_parser.rs
crates/scanners/src/core/: analysis_engine.rs  analysis_request.rs  analysis_response.rs  composition.rs  context.rs  correlation.rs  correlation_api.rs  fingerprint.rs  interfaces.rs  mod.rs  provenance.rs  report_generator.rs  result.rs  scanner.rs  severity.rs  severity_calculator.rs
crates/scanners/src/llm/: config.rs  factory.rs  hybrid_extractor.rs  ir_extractor.rs  ir_formatter.rs  ir_scanner_base.rs  llm_provider.rs  mock_provider.rs  mod.rs  position_marked_ir_extractor.rs  prompts.rs  provider.rs  raw_solidity_extractor.rs  representation.rs  scanner.rs  schemas.rs  source_extractor.rs  thalir_extractor.rs
crates/scanners/src/llm_scanners/: llm_comprehensive_scanner.rs  mod.rs  suite.rs
crates/scanners/src/representations/: bundle.rs  cranelift_adapter.rs  mod.rs  solidity_source.rs  source.rs  traits.rs
crates/scanners/src/runner/: engine.rs  mod.rs  registry.rs
crates/scanners/src/source/: access_control.rs  classic_reentrancy.rs  dangerous_functions.rs  delegatecall.rs  dos_ast.rs  dos_vulnerabilities.rs  gas_limit_dos.rs  integer_overflow.rs  loop_reentrancy.rs  missing_access_control.rs  mod.rs  time_vulnerabilities.rs  timestamp_simple.rs  unchecked_arithmetic.rs  unchecked_overflow.rs  unchecked_return.rs
crates/scanners/tests/: test_all_scanners_provenance.rs  test_all_scanners_provenance.sol  test_dos_multiple_calls_locations.rs  test_individual_scanner_provenance.rs  test_location_provenance.rs  test_location_provenance.sol  test_unchecked_arithmetic.rs  test_unchecked_simple.rs  test_vulnerable_wallet.rs  test_withdraw_access_control.rs
