[workspace]
members = [
    "crates/cli",
    "crates/scanners",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gianluca Brigandi"]
license = "MIT"
repository = "https://github.com/tameshi-dev/tameshi"

[workspace.dependencies]
logos = "0.14"
ariadne = "0.4"
chumsky = "0.9"
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
tree-sitter = "0.25"
tree-sitter-solidity = { package = "tree-sitter-solidity-traverse", version = "1.2.13-4e938a4" }
tracing = "0.1"
pretty_assertions = "1.4"
insta = "1.34"
criterion = "0.5"
glob = "0.3"