[package]
name = "tameshi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tameshi"
path = "src/main.rs"

[dependencies]
thalir-transform = "0.1.0"
thalir-emit = "0.1.0"
tameshi-scanners = { path = "../scanners" }
thalir-parser = "0.1.0"
thalir-core = "0.1.0"
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
glob = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4"
walkdir = "2.5.0"

[features]
llm = ["tameshi-scanners/llm"]

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0"
predicates = "3.1.0"
tempfile = "3.10.1"