[package]
name = "tameshi-scanners"
version = "0.1.0"
edition = "2021"
authors = ["Gianluca Brigandi"]
license = "MIT"
description = "Vulnerability scanning framework for smart contracts"
repository = "https://github.com/tameshi-dev/tameshi"

[dependencies]
thalir-core = "0.1.0"
thalir-transform = "0.1.0"
thalir-emit = "0.1.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
petgraph = "0.6"
indexmap = "2.0"
regex = "1.10"
tree-sitter = "0.25"
tree-sitter-solidity = { package = "tree-sitter-solidity-traverse", version = "1.2.13-4e938a4" }
streaming-iterator = "0.1.9"
rayon = "1.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "macros"] }
futures = { version = "0.3" }
dashmap = "5.5"
lru = "0.12"
once_cell = "1.19"
parking_lot = "0.12"
paste = "1.0"
tracing = "0.1"
colored = "2.0"
async-openai = "0.23"
async-trait = "0.1"
jsonschema = "0.18"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
quickcheck = "1.0"
proptest = "1.4"
criterion = "0.5"

[features]
default = ["async", "llm"]
async = []
llm = []
wasm = []
ml = []